<resources>
    <string name="app_name">Dots 2 Boxes</string>
    <string name="action_settings">Settings</string>
    <string name="ngame">New Game</string>
    <string name="settingString">Settings</string>
    <string name="aboutString">About</string>
    <string name="promptname">Enter Name:</string>
    <string name="p1NamePrompt">Player 1 Name:</string>
    <string name="p2NamePrompt">Player 2 Name:</string>
    <string name="p2Input">Player 2 Name Here:</string>
    <string name="p1Input">Player 1 Name Here</string>
    <string name="BeginGameButton">Start Game</string>
    <string name="smallBoard">5 X 5</string>
    <string name="mediumBoard">10 X 10</string>
    <string name="largeBoard">15 X 15</string>
    <string name="selectBoardSize">Select Board Size</string>
    <string name="colorPrompt">Select Player Color</string>

    <string-array name="color_Choice">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Yellow</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Cyan</item>
    </string-array>
    <string name="title_activity_actual_game">ActualGame</string>
</resources>
